--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -1,38 +1,39 @@
-.register {
+.login {
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 30px;
+    gap: 50px;
     background-color: #30B8EE;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='214' height='214' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23009cd0' fill-opacity='0.49'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.49'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
 
 }
 
-.form-container-register {
+.form-container-login {
     margin: 0;
     border-radius: 15px;
-    width: 320px;
+    width: 300px;
     font-size: large;
     background: #fff;
-    padding: 0px 2% 2% 2%;
-    height: 70%;
+    padding: 2%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 4%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.form-register {
+.form-login {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 12px;
-    width: 85%;
+    gap: 22px;
+    width: 90%;
 }
 
-.form-register input {
+.form-login input {
     width: 90%;
     height: 38px;
     line-height: 30px;
@@ -46,18 +47,18 @@
     transition: .5s ease;
 }
 
-.form-register input::placeholder {
+.form-login input::placeholder {
     color: #94a3b8;
 }
 
-.form-register input:hover, input:focus{
+.form-login input:hover, input:focus{
     outline: none;
     border-color: rgba(129, 140, 248);
     background-color: #fff;
     box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
 }
 
-.boton-register {
+.boton-login {
     padding: 10px 3em;
     font-size: 12px;
     text-transform: uppercase;
@@ -73,14 +74,14 @@
     outline: none;
 }
 
-.boton-register:hover {
+.boton-login:hover {
     background-color: #23c483;
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: #fff;
     transform: translateY(-5px);
 }
 
-.boton-register:active {
+.boton-login:active {
     transform: translateY(-1px);
 }
 
@@ -88,24 +89,11 @@ label {
     display: none;
 }
 
-.logo-header {
-    position: absolute;
-    right: 25px;
+.error-login {
+    display: none;
 }
 
-.logo-header:hover {
-    transform:scale(1.2);
+.sin-cuenta:hover {
+    color: #30B8EE;
     cursor: pointer;
-}
-
-.titulo-register {
-    font-size: 32px;
-}
-
-.header-register {
-    background: linear-gradient(#30B8EE, #30b8ee8a);
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
